feat: 단골매장에 파트너사 데이터 추가